# docflow

./: .gitignore  README.md  modal_app.py  pyproject.toml  untitled.drawio
notebooks/: dots_server.ipynb
src/docflow/: __init__.py  assemble.py  cli.py  convert.py  figures.py  preprocess.py  toc.py
src/docflow/api/: __init__.py  app.py  routes.py  runner.py  schemas.py  settings.py
src/docflow/models/: __init__.py  base.py  mock.py  modal_dots.py  remote_dots.py
tests/: conftest.py  test_api.py  test_assemble.py  test_convert.py  test_figures.py  test_models.py  test_toc.py
