[project]
name = "docflow"
version = "0.0.0"
description = "Convert PDFs into clean Markdown using a vision-language OCR model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10.0",
    "requests>=2.31",
]

[project.scripts]
docflow = "docflow.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
